objects/UPC_ADBASE__c.object
<CustomObject>
    <fields>
        <fullName>UPC_Address_Details__c</fullName>
        <formula>IF( CONTAINS($Profile.Name, &quot;Partner&quot;), 
HYPERLINK(&quot;/Partner/&quot; &amp;   Id , 
IF(NOT(ISBLANK(UPC_BUILDINGNAME__c)),UPC_BUILDINGNAME__c&amp;&quot;, &quot;,&quot;&quot;)&amp;
UPC_STREETNAME1__c&amp;
IF(NOT(ISBLANK(UPC_BUILDING_NUMBER__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_BUILDING_NUMBER__c &amp; UPC_BUILDINGNUMBERANNEX__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODE__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_POSTCODE__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODEOFFICENAME__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_POSTCODEOFFICENAME__c&amp;
IF(NOT(ISBLANK(UPC_COUNTRYCODEA2__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_COUNTRYCODEA2__c
, &quot;_self&quot; ),

HYPERLINK(&quot;/&quot; &amp;   Id , 
IF(NOT(ISBLANK(UPC_BUILDINGNAME__c)),UPC_BUILDINGNAME__c&amp;&quot;, &quot;,&quot;&quot;)&amp;
UPC_STREETNAME1__c&amp;
IF(NOT(ISBLANK(UPC_BUILDING_NUMBER__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_BUILDING_NUMBER__c &amp; UPC_BUILDINGNUMBERANNEX__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODE__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_POSTCODE__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODEOFFICENAME__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_POSTCODEOFFICENAME__c&amp;
IF(NOT(ISBLANK(UPC_COUNTRYCODEA2__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_COUNTRYCODEA2__c
, &quot;_self&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address_Formula__c</fullName>
        <description>Created by Nexell, field used by Cloudsense in the basket.</description>
        <formula>IF(NOT(ISBLANK(UPC_BUILDINGNAME__c)),UPC_BUILDINGNAME__c&amp;&quot;, &quot;,&quot;&quot;)&amp;
UPC_STREETNAME1__c&amp;
IF(NOT(ISBLANK(UPC_BUILDING_NUMBER__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_BUILDING_NUMBER__c &amp; UPC_BUILDINGNUMBERANNEX__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODE__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_POSTCODE__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODEOFFICENAME__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_POSTCODEOFFICENAME__c&amp;
IF(NOT(ISBLANK(UPC_COUNTRYCODEA2__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_COUNTRYCODEA2__c</formula>
        <label>Address Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address_no_Building_Name__c</fullName>
        <formula>UPC_STREETNAME1__c&amp;
IF(NOT(ISBLANK(UPC_BUILDING_NUMBER__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_BUILDING_NUMBER__c &amp; UPC_BUILDINGNUMBERANNEX__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODE__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_POSTCODE__c&amp;
IF(NOT(ISBLANK(UPC_POSTCODEOFFICENAME__c)),&quot; &quot;,&quot;&quot;)&amp; UPC_POSTCODEOFFICENAME__c&amp;
IF(NOT(ISBLANK(UPC_COUNTRYCODEA2__c)),&quot;, &quot;,&quot;&quot;)&amp; UPC_COUNTRYCODEA2__c</formula>
        <label>UPC Address no Building name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),
IF( 

AND(UPC_BBCS__c, NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IF(AND(NOT(UPC_BBCS__c), NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 

)),
IF( 

AND(UPC_BBCS__c, NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IF(AND(NOT(UPC_BBCS__c), NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 

))
)</formula>
        <label>BBCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Download__c</fullName>
        <label>BBCS Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Upload__c</fullName>
        <label>BBCS Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BBCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGCOORDINATEX__c</fullName>
        <label>BUILDING COORDINATE X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGCOORDINATEY__c</fullName>
        <label>BUILDING COORDINATE Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGNAME__c</fullName>
        <description>The building name</description>
        <label>Building Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGNUMBERANNEX__c</fullName>
        <description>The house number annex (A, B, C, etc.)</description>
        <label>Annex</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGREMARKS__c</fullName>
        <label>BUILDING REMARKS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BUILDINGSTATUSNAME__c</fullName>
        <label>BUILDING STATUS NAME</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>planned</fullName>
                </value>
                <value>
                    <fullName>under construction</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>to dismantle</fullName>
                </value>
                <value>
                    <fullName>dismantled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_BUILDING_NUMBER__c</fullName>
        <description>The house number</description>
        <label>Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Building_ID_not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building ID not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_CANTON_BUNDESLAND__c</fullName>
        <label>CANTON BUNDESLAND</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_COUNTRYCODEA2__c</fullName>
        <description>The 2-digit country code, as per ISO-3166</description>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),
IF( 

AND(UPC_FTTH__c, NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IF(AND(NOT(UPC_FTTH__c), NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 

)),
IF( 

AND(UPC_FTTH__c, NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IF(AND(NOT(UPC_FTTH__c), NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 

))
)</formula>
        <label>FTTH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Download__c</fullName>
        <description>Field created by Nexell to receive the download speed from foot print check</description>
        <label>FTTH Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Upload__c</fullName>
        <description>Field Created by Nexell to receive the Upload speed from footprint check,</description>
        <label>FTTH Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),
IF( 

AND( 
UPC_HFC__c, 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T1&quot;), 
NOT(ISNULL( UPC_Last_Footprint_Check__c )) 
), 
IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 

IF( 


AND( 
UPC_HFC__c, 
OR( 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T2&quot;), 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T3&quot;), 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T4&quot;) 
), 
NOT(ISNULL( UPC_Last_Footprint_Check__c )) 
), 
IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 

IF( 
AND( 
NOT(UPC_HFC__c), 
NOT(ISNULL( UPC_Last_Footprint_Check__c )) 
), 
IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 
))),
IF( 

AND( 
UPC_HFC__c, 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T1&quot;), 
NOT(ISNULL( UPC_Last_Footprint_Check__c )) 
), 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 

IF( 


AND( 
UPC_HFC__c, 
OR( 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T2&quot;), 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T3&quot;), 
ISPICKVAL( UPC_HFC_Suitability__c,&quot;T4&quot;) 
), 
NOT(ISNULL( UPC_Last_Footprint_Check__c )) 
), 
IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Orange&apos;,20,20), 

IF( 
AND( 
NOT(UPC_HFC__c), 
NOT(ISNULL( UPC_Last_Footprint_Check__c )) 
), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 
)))
)</formula>
        <label>HFC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Download__c</fullName>
        <description>Created by Nexell to store the download speed for HFC.</description>
        <label>HFC Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Suitability__c</fullName>
        <label>HFC Suitability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>T0</fullName>
                </value>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_HFC_Upload__c</fullName>
        <description>Created by Nexell to store the upload speed for HFC.</description>
        <label>HFC Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_HFC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_IDBUILDINGSTATUS__c</fullName>
        <label>ID BUILDING STATUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ID_BUILDING__c</fullName>
        <label>ID BUILDING</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_LOCATIONNAME1__c</fullName>
        <description>The town for the address. UPC uses LOCATION_NAME1 as the default town name</description>
        <label>Town</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_LOCATIONNAME2__c</fullName>
        <label>LOCATION NAME2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Footprint_Check__c</fullName>
        <label>Last Footprint Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_MapStreet__c</fullName>
        <formula>UPC_STREETNAME1__c + IF(ISBLANK(UPC_BUILDING_NUMBER__c),&apos;&apos;, &apos; &apos; + UPC_BUILDING_NUMBER__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC_MapStreet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_OS_ID__c</fullName>
        <label>OS ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_POSTCODEOFFICENAME__c</fullName>
        <label>POST CODE OFFICE NAME</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_POSTCODE_ANNEX__c</fullName>
        <label>POSTCODE ANNEX</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_POSTCODE__c</fullName>
        <description>The postcode of the address</description>
        <label>Postcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PRIMARY_APARTMENT_ID__c</fullName>
        <label>PRIMARY APARTMENT ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Network_Model__c</fullName>
        <description>Field Created by Nexell to store the Partner Network Model from the foot print check results.</description>
        <label>Partner Network Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DV</fullName>
                </value>
                <value>
                    <fullName>mixed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>PKV</fullName>
                </value>
                <value>
                    <fullName>PN</fullName>
                </value>
                <value>
                    <fullName>PN1</fullName>
                </value>
                <value>
                    <fullName>PN2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_STARTDATE__c</fullName>
        <label>START DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_STREETNAME1__c</fullName>
        <description>The street name. UPC uses STREETNAME1 for the primary street name</description>
        <label>Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_STREETNAME2__c</fullName>
        <description>The streetname. This is the alternative spelling of the streetname, eg in the secondary language</description>
        <label>Street2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Alert__c</fullName>
        <formula>IF(  CONTAINS($Profile.Name, &quot;Partner&quot;),
IF( 

AND(UPC_ULL_CU__c, NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IF(AND(NOT(UPC_ULL_CU__c), NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/Partner/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 

)),
IF( 

AND(UPC_ULL_CU__c, NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20), 
IF(AND(NOT(UPC_ULL_CU__c), NOT(ISNULL(UPC_Last_Footprint_Check__c ))), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IMAGE(&apos;/resource/1536831063000/Maintenance_Icon&apos;,&apos;Gray&apos;,20,20) 

))
)</formula>
        <label>ULL CU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Download__c</fullName>
        <label>ULL CU Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Upload__c</fullName>
        <label>ULL CU Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ULL CU</label>
        <type>Checkbox</type>
    </fields>
    <label>UPC Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UPC_Address_Details__c</columns>
        <columns>UPC_ID_BUILDING__c</columns>
        <columns>UPC_BUILDINGNAME__c</columns>
        <columns>UPC_BUILDING_NUMBER__c</columns>
        <columns>UPC_BUILDINGNUMBERANNEX__c</columns>
        <columns>UPC_HFC_Suitability__c</columns>
        <columns>UPC_STREETNAME1__c</columns>
        <columns>UPC_POSTCODE__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ADB-{00000000}</displayFormat>
        <label>SF ADB ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPC Addresses</pluralLabel>
    <recordTypes>
        <fullName>Address_Master</fullName>
        <active>true</active>
        <label>Address Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Footprint</fullName>
        <active>true</active>
        <label>Footprint</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>